# skkuverse-crawler

./: .env.example  .gitignore  CLAUDE.md  categories.json  departments.json  package-lock.json  package.json  sources.json  tsconfig.json
py/: .dockerignore  .env.example  Dockerfile  docker-compose.yml  pyproject.toml
py/scripts/: cleanup_summary_fields.py  generate_artifacts.py  generate_dept_ids.py
py/src/skkuverse_crawler/: cli.py
py/src/skkuverse_crawler/bus_hssc/: fetcher.py  module.py  stations.py
py/src/skkuverse_crawler/bus_jongro/: fetcher.py  module.py  stations.py
py/src/skkuverse_crawler/modules/: base.py  registry.py
py/src/skkuverse_crawler/notices/: attachment_validator.py  backfill.py  backfill_attachment_referer.py  backfill_attachments.py  backfill_wpdm_attachments.py  cli.py  constants.py  dedup.py  hashing.py  image_verifier.py  models.py  (+7 more)
py/tests/: conftest.py  test_contenttext_quality.py
py/tests/bus_hssc/: test_fetcher.py  test_stations.py
py/tests/bus_jongro/: test_fetcher.py  test_stations.py
py/tests/notices/: test_attachment_validator.py  test_backfill_attachment_referer.py  test_dedup.py  test_dept_ids.py  test_hashing.py  test_image_verifier.py  test_markdown_validator.py  test_normalizer_source_url.py  test_orchestrator.py  test_source_ids.py  test_update_checker.py
py/tests/notices_summary/: test_ai_client.py  test_processor.py  test_query.py
py/tests/scripts/: test_generate_artifacts.py
py/tests/shared/: test_bus_cache.py  test_config.py  test_html_cleaner.py  test_html_to_markdown.py  test_html_url_normalizer.py
(+75 files in other folders)
